fix: overflow scroll of editor container not triggering but instead the editors scroller is the one triggering

--- a/src/components/editor/editor.scss
+++ b/src/components/editor/editor.scss
@@ -1,5 +1,10 @@
 .cm-editor {
+	display: flex;
 	padding-top: 2em;
+	flex: 1;
+	.cm-scroller {
+		height: 100%;
+	}
 }
 
 .cm-gutters {
